--- a/css/main.css
+++ b/css/main.css
@@ -24,3 +24,16 @@ footer {
 .multiline {
     white-space: pre-wrap;
 }
+
+.img-container {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
+}
+
+.img-container img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
